tests/snapshots/generated_from_inputs__good_core018_direct.snap
---
source: tests/fixtures.rs
description: "/* test input */\n\nint main() {\n  printInt(readInt()-5);\n  printString(readString()+readString());\n  return 0 ;\n}"
input_file: inputs/good/core018_direct.lat
---
; ModuleID = 'core018_direct'
source_filename = "core018_direct"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %readInt = call i32 @readInt()
  %v2 = sub i32 %readInt, 5
  call void @printInt(i32 %v2)
  %readString = call %string* @readString()
  %readString1 = call %string* @readString()
  %new_string = call %string* @stringConcat(%string* %readString, %string* %readString1)
  call void @printString(%string* %new_string)
  ret i32 0
}

