tests/snapshots/generated_from_inputs__good_core018_fun.snap
---
source: tests/fixtures.rs
description: "int x() {\n    return -37;\n}\n\nstring y() {\n    return \"foo\";\n}\n\nstring z() {\n    return \"bar\";\n}\n\nint main() {\n  printInt(x()-5);\n  printString(y()+z());\n  return 0 ;\n}"
input_file: inputs/good/core018_fun.lat
---
; ModuleID = 'core018_fun'
source_filename = "core018_fun"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %latte_user_x = call i32 @latte_user_x()
  %v2 = sub i32 %latte_user_x, 5
  call void @printInt(i32 %v2)
  %latte_user_y = call %string* @latte_user_y()
  %latte_user_z = call %string* @latte_user_z()
  %new_string = call %string* @stringConcat(%string* %latte_user_y, %string* %latte_user_z)
  call void @printString(%string* %new_string)
  ret i32 0
}

define i32 @latte_user_x() {
b0:
  ret i32 -37
}

define %string* @latte_user_y() {
b0:
  %str_ptr = alloca [3 x i8], align 1
  store [3 x i8] c"foo", [3 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [3 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 3)
  ret %string* %new_string
}

define %string* @latte_user_z() {
b0:
  %str_ptr = alloca [3 x i8], align 1
  store [3 x i8] c"bar", [3 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [3 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 3)
  ret %string* %new_string
}

