tests/snapshots/generated_from_inputs__good_core019.snap
---
source: tests/fixtures.rs
description: "int main() {\n  int i = 78;\n  {\n    int i = 1;\n    printInt(i);\n  }\n  printInt(i);\n  while (i > 76) {\n    i--;\n    printInt(i);\n   // this is a little tricky\n   // on the right hand side, i refers to the outer i\n   int i = i + 7;\n   printInt(i);\n  }\n  printInt(i);\n  if (i > 4) {\n    int i = 4;\n    printInt(i);\n  } else {\n    printString(\"foo\");\n  } \n  printInt(i);\n  return 0 ;\n\n}"
input_file: inputs/good/core019.lat
---
; ModuleID = 'core019'
source_filename = "core019"

%string = type { i8*, i32 }

@latte.str.0 = private constant [3 x i8] c"foo"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 1)
  call void @printInt(i32 78)
  br label %b1

b1:                                               ; preds = %b3, %b0
  %v4 = phi i32 [ 78, %b0 ], [ %v8, %b3 ]
  %v6 = icmp sgt i32 %v4, 76
  br i1 %v6, label %b3, label %b2

b2:                                               ; preds = %b1
  call void @printInt(i32 %v4)
  %v15 = icmp sgt i32 %v4, 4
  br i1 %v15, label %b4, label %b5

b5:                                               ; preds = %b2
  %new_string = call %string* @newString(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @latte.str.0, i32 0, i32 0), i32 3)
  call void @printString(%string* %new_string)
  br label %b6

b4:                                               ; preds = %b2
  call void @printInt(i32 4)
  br label %b6

b6:                                               ; preds = %b4, %b5
  call void @printInt(i32 %v4)
  ret i32 0

b3:                                               ; preds = %b1
  %v8 = sub i32 %v4, 1
  call void @printInt(i32 %v8)
  %v11 = add i32 %v8, 7
  call void @printInt(i32 %v11)
  br label %b1
}

