tests/snapshots/generated_from_inputs__good_core023.snap
---
source: tests/fixtures.rs
description: "int main() {\n  int a=1,b=2,c=1,d=2,e=1,f=2,g=1,h=2,i=1,j=2,k=1,l=2,m=1,n=2;\n  return foo(a,b,c,d,e,f,g,h,i,j,k,l,m,n);\n}\n\n\nint foo(int a,int b,int c,int d,int e,int f,int g,\n        int h,int i,int j,int k,int l,int m, int n) {\n\t\n  int r = (2*a+b/2+c+d+e+f+g+h+i+j/2+k+l+m+n)%10;\n  printInt(r);\n  return r;\n}"
input_file: inputs/good/core023.lat
---
; ModuleID = 'core023'
source_filename = "core023"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_foo(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8, i32 %9, i32 %10, i32 %11, i32 %12, i32 %13) {
b0:
  %v15 = mul i32 2, %0
  %v17 = sdiv i32 %1, 2
  %v18 = add i32 %v15, %v17
  %v19 = add i32 %v18, %2
  %v20 = add i32 %v19, %3
  %v21 = add i32 %v20, %4
  %v22 = add i32 %v21, %5
  %v23 = add i32 %v22, %6
  %v24 = add i32 %v23, %7
  %v25 = add i32 %v24, %8
  %v27 = sdiv i32 %9, 2
  %v28 = add i32 %v25, %v27
  %v29 = add i32 %v28, %10
  %v30 = add i32 %v29, %11
  %v31 = add i32 %v30, %12
  %v32 = add i32 %v31, %13
  %v34 = srem i32 %v32, 10
  call void @printInt(i32 %v34)
  ret i32 %v34
}

define i32 @main() {
b0:
  %latte_user_foo = call i32 @latte_user_foo(i32 1, i32 2, i32 1, i32 2, i32 1, i32 2, i32 1, i32 2, i32 1, i32 2, i32 1, i32 2, i32 1, i32 2)
  ret i32 %latte_user_foo
}

