tests/snapshots/generated_from_inputs__good_core024.snap
---
source: tests/fixtures.rs
description: "int main() {\n  f(1,2);\n  return 0;\n}\n\nvoid f(int x, int y) {\n  if (y > x || e())\n    printString(\"yes\");\n}\n\nboolean e() {\n  printString(\"NOOO\");\n  return false;\n  }\n\n"
input_file: inputs/good/core024.lat
---
; ModuleID = 'core024'
source_filename = "core024"

%string = type { i8*, i32 }

@latte.str.0 = private constant [4 x i8] c"NOOO"
@latte.str.1 = private constant [3 x i8] c"yes"

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i1 @latte_user_e() {
b0:
  %new_string = call %string* @newString(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @latte.str.0, i32 0, i32 0), i32 4)
  call void @printString(%string* %new_string)
  ret i1 false
}

define void @latte_user_f(i32 %0, i32 %1) {
b0:
  %v2 = icmp sgt i32 %1, %0
  br i1 %v2, label %b2, label %b1

b1:                                               ; preds = %b0
  %latte_user_e = call i1 @latte_user_e()
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v4 = phi i1 [ %v2, %b0 ], [ %latte_user_e, %b1 ]
  br i1 %v4, label %b3, label %b4

b3:                                               ; preds = %b2
  %new_string = call %string* @newString(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @latte.str.1, i32 0, i32 0), i32 3)
  call void @printString(%string* %new_string)
  br label %b4

b4:                                               ; preds = %b3, %b2
  ret void
}

define i32 @main() {
b0:
  call void @latte_user_f(i32 1, i32 2)
  ret i32 0
}

