tests/snapshots/generated_from_inputs__good_core027.snap
---
source: tests/fixtures.rs
description: "int main() {\n  f(\"bad\");\n  return 0;\n}\n\nvoid f(string arg) {\n  arg = \"good\";\n  printString(arg);\n}\n"
input_file: inputs/good/core027.lat
---
; ModuleID = 'core027'
source_filename = "core027"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define void @latte_user_f(%string* %0) {
b0:
  %str_ptr = alloca [4 x i8], align 1
  store [4 x i8] c"good", [4 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [4 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 4)
  call void @printString(%string* %new_string)
  ret void
}

define i32 @main() {
b0:
  %str_ptr = alloca [3 x i8], align 1
  store [3 x i8] c"bad", [3 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [3 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 3)
  call void @latte_user_f(%string* %new_string)
  ret i32 0
}

