tests/snapshots/generated_from_inputs__good_core031.snap
---
source: tests/fixtures.rs
description: "int main()\n{\n   printInt(f(1,-1));\n   return 0;\n}\n\nint f(int a, int b) {\n  if((a>0 &&b >0) || (a<0 && b <0)) {return 7;} else {return 42;}\n}  \n"
input_file: inputs/good/core031.lat
---
; ModuleID = 'core031'
source_filename = "core031"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_f(i32 %0, i32 %1) {
b0:
  %v3 = icmp sgt i32 %0, 0
  br i1 %v3, label %b1, label %b2

b1:                                               ; preds = %b0
  %v5 = icmp sgt i32 %1, 0
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v6 = phi i1 [ %v3, %b0 ], [ %v5, %b1 ]
  br i1 %v6, label %b4, label %b3

b3:                                               ; preds = %b2
  %v9 = icmp slt i32 %0, 0
  br i1 %v9, label %b5, label %b6

b5:                                               ; preds = %b3
  %v12 = icmp slt i32 %1, 0
  br label %b6

b6:                                               ; preds = %b5, %b3
  %v13 = phi i1 [ %v9, %b3 ], [ %v12, %b5 ]
  br label %b4

b4:                                               ; preds = %b6, %b2
  %v14 = phi i1 [ %v6, %b2 ], [ %v13, %b6 ]
  br i1 %v14, label %b7, label %b8

b8:                                               ; preds = %b4
  ret i32 42

b7:                                               ; preds = %b4
  ret i32 7
}

define i32 @main() {
b0:
  %latte_user_f = call i32 @latte_user_f(i32 1, i32 -1)
  call void @printInt(i32 %latte_user_f)
  ret i32 0
}

