tests/snapshots/generated_from_inputs__good_core032.snap
---
source: tests/fixtures.rs
description: "/* division */\n\nint main() {\n  { printInt(-42 / -1); }\n  return 0 ;\n\n}\n"
input_file: inputs/good/core032.lat
---
; ModuleID = 'core032'
source_filename = "core032"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 42)
  ret i32 0
}

