tests/snapshots/generated_from_inputs__good_core033.snap
---
source: tests/fixtures.rs
description: "int funkcja_ifbooltrudny (boolean f, boolean t) {\n  if ((!f && f) || !(f || !t)) {\n    printInt(1042);\n  } else {\n    printInt(2042);\n  }\n  return 0;\n}\n\nint main () {\n  funkcja_ifbooltrudny (false, true);\n  return 0;\n}\n"
input_file: inputs/good/core033.lat
---
; ModuleID = 'core033'
source_filename = "core033"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_funkcja_ifbooltrudny(i1 %0, i1 %1) {
b0:
  %v2 = xor i1 %0, true
  br i1 %v2, label %b1, label %b2

b1:                                               ; preds = %b0
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v3 = phi i1 [ %v2, %b0 ], [ %0, %b1 ]
  br i1 %v3, label %b4, label %b3

b3:                                               ; preds = %b2
  br i1 %0, label %b6, label %b5

b5:                                               ; preds = %b3
  %v6 = xor i1 %1, true
  br label %b6

b6:                                               ; preds = %b5, %b3
  %v7 = phi i1 [ %0, %b3 ], [ %v6, %b5 ]
  %v8 = xor i1 %v7, true
  br label %b4

b4:                                               ; preds = %b6, %b2
  %v9 = phi i1 [ %v3, %b2 ], [ %v8, %b6 ]
  br i1 %v9, label %b7, label %b8

b8:                                               ; preds = %b4
  call void @printInt(i32 2042)
  br label %b9

b7:                                               ; preds = %b4
  call void @printInt(i32 1042)
  br label %b9

b9:                                               ; preds = %b7, %b8
  ret i32 0
}

define i32 @main() {
b0:
  %latte_user_funkcja_ifbooltrudny = call i32 @latte_user_funkcja_ifbooltrudny(i1 false, i1 true)
  ret i32 0
}

